--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
     </main>
     <footer id="rodape">Desenvolvido por <a href="https://github.com/Crysthoferr" target="_blank">Crysthofer</a> - 2025</footer>
-    <script src="script.js" type="module"></script>
     <script src="https://kit.fontawesome.com/c47cd9494c.js" crossorigin="anonymous"></script>
+    <script type="module" src="assets/js/index.js"></script>
 </body>
 </html>
