Criação de lógica
Criei a lógica do projeto.

--- a/index.html
+++ b/index.html
@@ -14,23 +14,12 @@
     </header>
     <main>
         <section id="input_tarefas">
-            <input type="text" id="tarefas" name="tarefas" required placeholder="Adicione uma nova tarefa...">
-            <button type="submit" id="btn_add_tarefa">Adicionar</button>
+            <input type="text" id="tarefas" required placeholder="Adicione uma nova tarefa...">
+            <button type="button" id="btn_add_tarefa">Adicionar</button>
         </section>
         <section id="container_tarefas">
             <ul id="lista_tarefas">
-                <li>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto dolore nam cum ullam, earum eum dolor animi nihil distinctio unde, officiis soluta cupiditate voluptatum repellendus corporis natus nemo qui optio. 
-                    <div id="btns">
-                        <button class="btn_conferir">
-                            <i class="fa-solid fa-check" style="color: #34ab29;"></i>
-                        </button>
-                        <button class="btn_remover">
-                            <i class="fa-solid fa-xmark" style="color: #de5151;"></i>
-                        </button>
-                    </div>
-                </li>
-                
+
             </ul>
         </section>
     </main>
