Criação de modal
Criei o modal do projeto

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <header id="cabecalho">
         <h1>Lista de Tarefas !</h1>
     </header>
+    <dialog id="modal">
+        <p>Por favor, insira uma tarefa válida.</p>
+        <button id="btn_fecharModal">Fechar</button>
+    </dialog>
     <main>
         <section id="input_tarefas">
             <input type="text" id="tarefas" required placeholder="Adicione uma nova tarefa...">
